2005-09-19  Richard Henderson  <rth@redhat.com>

	PR 23941
	* real.c (exact_real_truncate): Return false if the format cannot
	represent the number as a normal.

	* config/alpha/alpha.c (alpha_rtx_costs) <FLOAT_EXTEND>: Cost 0
	for a memory source.

2005-09-19  Dorit Nuzman  <dorit@il.ibm.com>

	* tree-ssa-operands.c (swap_tree_operands): Export.
	* tree.h (swap_tree_operands): Declare.
	* tree-vectorizer.c (vect_is_simple_reduction): Remove ATTRIBUTE_UNUSED.
	Call swap_tree_operands.
	
2005-09-19  Richard Henderson  <rth@redhat.com>

	* tree-flow.h (merge_alias_info): Declare.
	* tree-ssa-copy.c (merge_alias_info): Export.
	* tree-vect-transform.c (vect_create_index_for_vector_ref): Remove.
	(vect_create_data_ref_ptr): Use create_iv directly.
	(vectorizable_load): Use correct types for integer constants.
	(vect_generate_tmps_on_preheader): Likewise.
	(vect_gen_niters_for_prolog_loop): Likewise.

2005-09-19  Steven Bosscher  <stevenb@suse.de>

	PR rtl-optimization/23943
	* cse.c (find_best_addr): Never propagate an EXPR_LIST rtx.

2005-09-18  Jan Hubicka  <jh@suse.cz>

	* calls.c (flags_from_decl_or_type): Do not set ECF_LIBCALL_BLOCK.

2005-09-18  Eric Botcazou  <ebotcazou@adacore.com>

	* varasm.c (output_constant): Do not abort on conversions to union
	types between different sizes.

2005-09-18  Richard Guenther  <rguenther@suse.de>

	PR middle-end/23944
	* gimplify.c (fold_indirect_ref_rhs): Fix thinko in
	fallback.

2005-09-18  Paul Brook  <paul@codesourcery.com>

	* config/m68k/fpgnuib.c (__floatsidf): Don't rely on signed overflow.

2005-09-17  Richard Henderson  <rth@redhat.com>

	* tree-pass.h, tree-flow.h, tree-ssa-dce.c: Revert last change.
	* tree-ssa-loop.c (pass_vect_dce): Remove.
	* passes.c (init_optimization_passes): Add pass_dce as a sub-pass
	of pass_vectorize.

2005-09-17  Richard Henderson  <rth@redhat.com>

	* tree-pass.h (pass_vect_dce): Declare.
	* passes.c (init_optimization_passes): Add it.
	* tree-flow.h (tree_ssa_dce): Declare.